# embedded-local-ai-field-guide

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: ollama.env.ps1.example
docs/: 01-evidence-and-method.md  02-hardware-fit.md  03-log-analysis-stack.md  04-git-state-handoff.md  05-narrow-automations.md  06-security.md  07-evaluation.md  08-deployment-decision.md  09-project-memory-ledger.md  10-compiler-native-index.md  11-nightly-second-brain.md  12-auto-grill-decision-log.md
docs/agent/: DECISIONS.md  STATE.yaml  known-good.yaml  resume-gate.md
docs/agent/tasks/_template/: ARTIFACTS.yaml  HANDOFF.yaml
models/: Modelfile.analysis  Modelfile.triage
research/: evidence-register.md  local-smoke-2026-07-15.md  research-manifest.json  source-provenance.csv
samples/: project-memory.synthetic.jsonl
schemas/: event-ledger.schema.json  triage.schema.json
scripts/: Analyze-Log.ps1  Doctor.ps1  Prepare-Models.ps1  Start-OllamaLocal.ps1  probe_ollama.py  run-tests.ps1
src/embedded_log_analyzer/: __init__.py  cli.py  memory_ledger.py  ollama_client.py  pipeline.py  preprocess.py  schema.py  validation.py
src/embedded_log_analyzer/resources/: __init__.py
src/embedded_log_analyzer/resources/prompts/: analysis.system.txt  triage.system.txt
src/embedded_log_analyzer/resources/schemas/: analysis.schema.json
tests/: test_cli.py  test_memory_ledger.py  test_ollama_client.py  test_pipeline.py  test_preprocess.py  test_resources.py  test_validation.py
